--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -4,18 +4,25 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    
+    
     &__container{
         max-width: 1140px;
         width: 100%;
         margin: 3rem 3rem;
-
+        @media(max-width:764px){
+            margin: 1rem;
+        }
+        
         &__row{
             display: grid;
             grid-template-columns: 1fr 1fr;
             padding: 15px;
             gap: 20px;
-
+            @media(max-width:764px){
+                display: block;
+                margin: 0;
+            }
         }
     }
 }
