--- a/src/styles/_cta.scss
+++ b/src/styles/_cta.scss
@@ -18,6 +18,15 @@
             justify-content: space-between;
             align-items: center;
             margin: 0;
+
+            @media(max-width:764px){
+                h2{
+                    font-size: 20px;
+                }
+                a{
+                    text-align: center;
+                }
+            }
         }
     }
 }
