--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,34 +1,67 @@
 @use 'variaveis';
 
-.header{
-    background-color: rgba(0,0,0,.3);
+.header {
+    background-color: rgba(0, 0, 0, .3);
     position: sticky;
     top: 0;
     left: 0;
 
-    &__container{
+    &--is-hidden {
+        background-color: transparent;
+
+        .header {
+
+            &__logo,
+            &__links__item:first-child {
+                opacity: 0;
+                visibility: hidden; //oculta o elemento, assim não conseguimos clicar nele
+                //Fade para Transição de exibição do menu, ela precisar esta nos elementos que estamos alterando
+                transition: opacity .5s ease;
+            }
+        }
+    }
+
+
+    &__container {
         padding: 8px 16px;
         display: flex;
         justify-content: space-between;
+
+        @media (max-width:768px) {
+            padding: 0 12px 0 20px;
+
+        }
+
+
     }
-    &__logo{
+
+    &__logo {
         display: block;
         max-width: 160px;
         width: 100%;
         height: 27px;
         margin: 21px;
         text-align: center;
+
+        @media (max-width:768px) {
+            max-width: 64px;
+        }
     }
 
-    &__links{
+    &__links {
         display: flex;
-            &__item{
-                margin: 5px;
 
-                & a{
-                    padding: 6px 24px;
-                }
+        &__item {
+            margin: 5px;
+
+            & a {
+                padding: 6px 24px;
             }
+
+            @media (max-width:768px) {
+                text-align: center;
+                width: 100%;
+            }
+        }
     }
-    
 }
