--- a/src/styles/_seasons.scss
+++ b/src/styles/_seasons.scss
@@ -3,37 +3,39 @@
 // .seasons__container__tabs button {
 //     margin-left: 20px;
 // }
-.seasons{ 
+.seasons {
 
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    &__container{
+
+    &__container {
         max-width: 1140px;
         width: 100%;
-        margin: 3rem 3rem;  
+        margin: 3rem 3rem;
 
-        &__tabs > div {
+        &__tabs>div {
             box-sizing: border-box;
             width: 50%;
-            
-
-        
         }
 
-        &__tabs{
+        @media(max-width:764px) {
+            &__tabs>div {
+                width: 100%;
+            }
+        }
+
+        &__tabs {
             display: flex;
             justify-content: space-between;
             width: 100%;
 
-            h1{
+            h1 {
                 padding-left: 20px;
             }
-            
 
-            div{
-                &:last-child{
+            div {
+                &:last-child {
                     display: flex;
                     justify-content: flex-end;
                     align-items: flex-end;
@@ -42,7 +44,8 @@
                     padding: 0.55em 1.5em 0.5em;
                 }
             }
-            div:last-child button{
+
+            div:last-child button {
                 margin-left: 20px;
                 background-color: transparent;
                 border: none;
@@ -57,33 +60,49 @@
                 border-color: variaveis.$corTextoPrincipal;
             }
 
-        }        
+            @media(max-width:764px) {
+                display: block;
+                width: 100%;
+                padding: 0;
+
+                h1 {
+                    padding: 0;
+                    text-align: center;
+                }
+
+                div:last-child button {
+                    margin: 0;
+                    padding: 0;
+                }
+            }
+
+        }
     }
 
-    &__list{
+    &__list {
         display: none;
         grid-template-columns: 1fr 1fr 1fr;
         margin-top: 3rem;
         gap: 20px;
         list-style: none;
+        @media(max-width:764px){
+            grid-template-columns: 1fr;
+        }
 
 
-        &--is-active{
+        &--is-active {
             display: grid;
         }
 
-        &__item{
+        &__item {
             display: flex;
             justify-content: center;
             margin: 0;
             padding: 0;
-
-            
-            
-           img{
-               max-width: 100%;
-               height: auto;
+            img {
+                max-width: 100%;
+                height: auto;
             }
         }
-    }     
+    }
 }
